# page-analyzer

./: .env_example  .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: check.yml
page_analyzer/: app.py  data_parser.py  database.sql  db.py  make_requests.py  url.py  url_parser.py
page_analyzer/templates/: base.html  index.html  show_url.html  urls.html
tests/: conftest.py  test_index.py  test_post_urls.py
